--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </a>
     </div>
 
+<input type="text" value="Words...">
+
   <section id="contact">
     <div class="overlay">
       <div class="containers">
